# Chattanooga-City-Election

./: .replit  Find_My_Dist.py  Main.py  My_Districts.py  README.md  main.py  pyproject.toml  replit.nix  robots.txt  sitemap.xml  test_streamlit.py
.streamlit/: config.toml
assets/: City_Council.csv  council_members.csv  district_boundaries.json  polling_places.csv
attached_assets/: Chattanooga_Redistricting_-_New_Districts_20250113.csv  Chip-Henderson-D1.avif  City_Council__old__20250115.csv  Current_City_Council_Districts_20250115.csv  Darrin-Ledford-District-Four.avif  Demetrus-Coonrod-District-Nine.avif  Isiah-Hester-District-Five.avif  Jenny-Hill-D2.avif  Ken-Smith-D3.avif  Marvene-Noel-District-Eight.avif  Pasted--Modified-section-for-the-video-modal-functionality-if-candidate-contact-website-if-youtube-c-1740166416021.txt  Pasted--Video-modal-implementation-compatible-with-older-Streamlit-versions-if-candidate-contact-website--1740166806492.txt  Pasted--YouTube-Video-Handling-as-Modal-if-candidate-contact-video-show-modal-1740231232512.txt  Pasted--blockquote-class-instagram-media-data-instgrm-captioned-data-instgrm-permalink-https-www-insta-1737686401904.txt  Pasted--blockquote-class-instagram-media-data-instgrm-permalink-https-www-instagram-com-reel-DE7SC4JtT-1738724912343.txt  Pasted--blockquote-class-instagram-media-data-instgrm-permalink-https-www-instagram-com-reel-DE7SC4JtT-1739243630687.txt  Pasted--blockquote-class-instagram-media-data-instgrm-permalink-https-www-instagram-com-reel-DGEEmSNJB-1739828763948.txt  Raquetta-Dotley-District-Seven.avif  (+13 more)
(+25 files in other folders)
