[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "folium>=0.19.4",
    "geopandas>=1.0.1",
    "geopy>=2.4.1",
    "openai>=1.59.7",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "requests>=2.32.3",
    "shapely>=2.0.6",
    "streamlit>=1.31.0",
    "streamlit-folium>=0.24.0",
    "streamlit-extras>=0.4.0",
    "trafilatura>=2.0.0",
    "twilio>=9.4.4",
    "pytz>=2024.2",
    "streamlit-pdf-viewer>=0.0.21",
    "streamlit-modal>=0.1.2",
]
